--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "myportfolio",
   "private": true,
   "version": "0.0.0",
+   "homepage": "http://vikasnallana.github.io/myportfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -19,7 +20,8 @@
     "aos": "^3.0.0-beta.6",
     "devicon": "^2.16.0",
     "framer-motion": "^11.2.6",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.3.0",
+    "github-pages": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
